# claude-log-cleaner

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: tests.yml
commands/: clean.md  scan-secrets.md
plugins/log-cleaner/.claude-plugin/: plugin.json
plugins/log-cleaner/commands/: clean.md  scan-secrets.md  scan.md  set-retention.md  status.md
plugins/log-cleaner/hooks/: hooks.json
plugins/log-cleaner/scripts/: cleanup.py  cleanup.sh  config.py  secret_scanner.py  utils.py
tests/: conftest.py  test_cleanup.py  test_secret_detection.py
